# ytt

./: .gitignore  LICENSE  Makefile  README.md  STABILITY.md  bullseye.yaml  pyproject.toml  ytt.py
.github/workflows/: ci.yml  release.yml
docs/: audit-log.md
scripts/: brew-formula-gen.py
scripts/playlist-ingest/: build-index.sh  channels.example.yaml  ingest-one.sh  ingest.sh
scripts/playlist-ingest/tests/: ingest-one.bats  ingest.bats  lib.bash
scripts/playlist-ingest/tests/mocks/: claude  yt-dlp  ytt
