[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytt"
version = "0.1.0"
description = "Fetch YouTube video transcripts from the command line."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Marcelo Cantos" }]
keywords = ["youtube", "transcript", "cli", "captions", "subtitles"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: Utilities",
]
dependencies = [
  "youtube-transcript-api>=1.0",
]

[project.urls]
Homepage = "https://github.com/marcelocantos/ytt"
Repository = "https://github.com/marcelocantos/ytt"
Issues = "https://github.com/marcelocantos/ytt/issues"

[project.scripts]
ytt = "ytt:main"

[tool.setuptools]
py-modules = ["ytt"]
